fix decalage notes et ajout bot, changements structures de donnes